# asicode

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  asi.py  common.py  config.py  context_collector.py  diff_apply.py  install.sh  patch_synth.py  path_security.py  plan_compiler.py  pyproject.toml
.github/workflows/: lint.yml  release.yml
docs/: improvement_proposals.md
docs/design/: typed_failure_classifier.md
external_llm/: __init__.py  anthropic_client.py  ast_rewrite.py  client.py  code_analyzer.py  code_structure_utils.py  context_builder.py  dependency_graph.py  design_session.py  hybrid_parser.py  image_utils.py  intelligent_service.py  model_registry.py  multi_planner.py  ollama_api.py  openai_client.py  output_modes.py  output_parser.py  patch_engine.py  patch_synthesizer.py  pip_env.py  project_analyzer.py  providers.py  semantic_patch.py  service.py  smart_analyzer.py  super_context_builder.py
external_llm/agent/: CLASSIFIERS.md  README_CLI.md  __init__.py  _response_utils.py  _shared_utils.py  _thread_pool.py  _user_intent.py  agent_context_manager.py  agent_escalation_pipeline.py  agent_fast_path.py  agent_loop.py  agent_loop_types.py  agent_phase_manager.py  agent_planner_pipeline.py  agent_profile.py  agent_turn_pipeline.py  alignment_scorer.py  anchor_shared.py  argument_repairer.py  ast_cache.py  ast_engine.py  async_tool_executor.py  auto_correction.py  background_job_manager.py  call_graph.py  checkpoint_store.py  context_budget.py  context_contract.py  context_manager.py  context_utils.py  design_chat_loop.py  enums.py  execution_mode_classifier.py  execution_spec.py  execution_thresholds.py  failure_classifier.py  failure_context.py  failure_pattern_store.py  file_cache.py  fix_spec_claim_validator.py  (+59 more)
external_llm/agent/config/: thresholds.py
external_llm/agent/tool_handlers/: __init__.py  agent_tools.py  analysis_tools.py  ast_op_executor.py  browser_tools.py  constants.py  git_tools.py  read_tools.py  shell_policy.py  test_tools.py  web_search_tools.py  write_tools.py
external_llm/analysis/: _dead_block_shared.py  ast_similarity_scanner.py  broken_contract_scanner.py  container_reachability_scanner.py  contradictory_logic_scanner.py  cross_file_refs.py  dead_block_scanner.py  duplicate_definition_scanner.py  parse_cache.py  public_dead_code_scanner.py  unused_import_scanner.py  vulture_scanner.py
external_llm/common/: atomic_io.py  file_lock.py  indent_utils.py  repo_files.py  subprocess_utils.py
external_llm/context/: context_packs.py
external_llm/edit_localization/: __init__.py  dataflow_extractor.py  graph_propagator.py  relevance_scorer.py  request_analyzer.py
external_llm/editor/cross_language/: __init__.py  models.py  strategy_abstraction.py  transfer_engine.py
external_llm/editor/learning/: __init__.py  experience_store.py  exploration_state.py  learning_sink.py  pattern_extractor.py  primitive_learning_models.py  primitive_learning_scorer.py  primitive_learning_store.py  primitive_learning_updater.py  primitive_sequence_models.py  primitive_sequence_scorer.py  primitive_sequence_store.py  primitive_sequence_updater.py  problem_signature.py  strategy_execution_bias.py  (+4 more)
external_llm/graph/: composite_risk.py  execution_graph_advisor.py  graph_builder.py  graph_facade.py  models.py  repository_graph.py  run_scoped_graph_cache.py  spec_graph_enricher.py  virtual_graph.py
external_llm/languages/: __init__.py  _normalize.py  base.py  bash_provider.py  c_provider.py  capabilities.py  comment_syntax.py  csharp_provider.py  css_provider.py  dependency_checker.py  go_provider.py  html_provider.py  java_provider.py  javascript_provider.py  json_provider.py  kotlin_provider.py  libcst_utils.py  lua_provider.py  models.py  php_provider.py  python_provider.py  registry.py  ruby_provider.py  rust_provider.py  scala_provider.py  swift_provider.py  syntax_validator.py  tree_sitter_utils.py  typescript_provider.py
external_llm/testing/: symbol_aware_test_finder.py  test_dependency_graph.py
scripts/: check_config_flag_reachable.py  check_f401_no_new.py  check_f811_no_new.py  check_f821_no_new.py  check_f823_none.py  config_flag_unreachable_baseline.txt  export_public.py  f401_baseline.txt  f811_baseline.txt  f821_baseline.txt  release_public.py
services/: patch_helpers.py
tests/: conftest.py  test_asi_utils.py  test_common.py  test_config.py  test_context_budget.py  test_embedding_singleton.py  test_intent_classifier.py  test_learned_policy.py  test_ollama_api.py  test_path_security.py  test_progress_printer_inflight.py  test_real_agent.py  test_small.css  test_string_helper.py  test_work_state_digest.py  test_write_safety_repair_path.py
tests/integration/: helpers.py  test_cache_and_parallel.py  test_multilang_e2e.py
tests/unit/: test_anthropic_cache.py  test_anthropic_thinking_echo.py  test_auth_retry_key.py  test_auto_continue.py  test_bounded_subprocess.py  test_cli_json_output.py  test_code_structure_utils.py  test_common_repo_files.py  test_compress_failure_notice.py  test_config_path_invariant.py  test_context_builder_unit.py  test_ctrlc_state_machine.py  test_deepseek_thinking_disable.py  test_dep_status_line_align.py  test_design_context_cache.py  test_design_session_auto_flag.py  test_design_session_multiprocess.py  test_deterministic_safe_replace.py  test_diff_apply_pure.py  test_dotfile_path_normalization.py  test_external_llm_prompt_builders.py  test_file_lock_degradation.py  test_general_mode_compression_config.py  test_helper_command.py  test_insights_compact_behavior.py  test_insights_compact_message_align.py  test_insights_compact_notice.py  test_insights_compact_reasoning_budget.py  test_insights_compact_suppress.py  test_insights_keyboard_interrupt.py  test_interrupt_tool_results.py  test_json_repair.py  test_json_repair_shared.py  test_llm_utils.py  test_multi_planner.py  test_next_suggestion_validation.py  test_openai_cache_accounting.py  test_openai_client_retry_after.py  test_openai_reasoning_model.py  test_openrouter_provider.py  (+24 more)
utils/: __init__.py  llm_utils.py  string_helper.py  version_check.py
(+326 files in other folders)
